--- a/aboutme.html
+++ b/aboutme.html
@@ -4,17 +4,24 @@
 <head>
 <title>Page Title</title>
 <style>
-p {
-	border: 1px solid lightslategray;
-    }
+	
 ul {
+	list-style-type: none;
 	border: 1px solid lightslategray;
 	padding: 45px;
+	margin: 0;
+	background-color: lightslategray;
+	}
+	
+li {
+	float: left;
 	}
 	
 	</style>
 </head>
+	
 <!-- THis is a comment -->
+	
 <body style="background-color:powderblue;">
 <h1 title="Name" style="font-family:calibri;">Sienna Li</h1>
 <h2>About Me</h2>
