--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 	
 ul {
 	list-style-type: none;
-	border: 1px solid lightslategray;
+	border: 20px solid lightslategray;
 	padding: 0;
 	margin: 0;
 	background-color: lightslategray;
@@ -17,9 +17,8 @@ li {
 	float: left;
 	color: black;
 	text-align: center;
-	padding: 15px;
-	}
-	
+	padding: 15px'
+	}	
 
 	
 	</style>
@@ -33,6 +32,7 @@ li {
 	<li>Resume</li>
 	<li>Portfolio</li>
 </ul>
+	<br></br>
 <h1 title="Name" style="font-family:calibri;">Sienna Li</h1>
 <h2>About Me</h2>
 <p title="Biography">I was born in Taiwan in 2000, and came to the United States after that. I <i>have</i> lived in mulitple states and <del>currently</del> reside in <ins>Chatham</ins>, New Jersey </p>
