--- a/aboutme.html
+++ b/aboutme.html
@@ -7,14 +7,18 @@
 	
 ul {
 	list-style-type: none;
-	border: 20px solid lightslategray;
-	padding: 0;
+	border: 1px solid lightslategray;
+	padding: 10px;
 	margin: 0;
+	overflow: hidden;
 	background-color: lightslategray;
 	}
 	
 li {
 	float: left;
+	}
+	
+li {
 	color: black;
 	text-align: center;
 	padding: 15px;
