--- a/aboutme.html
+++ b/aboutme.html
@@ -35,9 +35,9 @@ li a:hover {
 	
 <body style="background-color:powderblue;">
 <ul style="raleway">
-	<li><a href=#aboutme>About Me</a></li>
-	<li><a href=#resume>Resume</a></li>
-	<li><a href=#portfolio>Portfolio</a></li>
+	<li><a href=#aboutme>ABOUT ME</a></li>
+	<li><a href=#resume>RESUME</a></li>
+	<li><a href=#portfolio>PORTFOLIO</a></li>
 </ul>
 	<br></br>
 <h1 title="Name" style="font-family:calibri;">Sienna Li</h1>
