--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,6 @@
 	
 ul {
 	list-style-type: none;
-	border: 1px solid lightslategray;
 	padding: 0px;
 	margin: 0;
 	overflow: hidden;
@@ -20,9 +19,10 @@ li {
 	
 li a {
 	display: block;
-	color: black;
+	color: white;
 	text-align: center;
-	padding: 15px;
+	padding: 16px;
+	text-decoration: none;
 	}	
 li a:hover {
 	background-color: darkslategray;
