--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@ li a:hover {
 	
 <!-- THis is a comment -->
 	
-<body style="background-color:powderblue;">
+<body style="background-color:lightslategray;">
 <ul style="font-family: 'Raleway', sans-serif;">
 	<li><a href=#aboutme>ABOUT ME</a></li>
 	<li><a href=#resume>RESUME</a></li>
