--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,11 @@ li a {
 li a:hover {
 	background-color: darkslategray;
 	}
+p {
+	color: white;
+	}
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Playfair+Display|Raleway');
 
 	
 	</style>
