--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 <head>
 <title>Page Title</title>
 <style>
-	
+	@import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Playfair+Display|Raleway');
 ul {
 	list-style-type: none;
 	padding: 0px;
@@ -12,11 +12,9 @@ ul {
 	overflow: hidden;
 	background-color: lightslategray;
 	}
-	
 li {
 	float: right;
 	}
-	
 li a {
 	display: block;
 	color: white;
@@ -31,9 +29,6 @@ p {
 	color: white;
 	}
 
-@import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Playfair+Display|Raleway');
-
-	
 	</style>
 </head>
 	
@@ -50,7 +45,7 @@ p {
 <h1 title="Name" style="font-family: 'Josefin Slab', serif;">Sienna Li</h1>
 <h2></h2>
 <p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
-	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's philosophy club! <br></br> My favorite web pages are:  </p>
+	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's philosophy club! <br></br> My favorite web pages are: Bored Button </p>
 
 	
 </body>
