--- a/aboutme.html
+++ b/aboutme.html
@@ -29,20 +29,24 @@ p {
 	color: white;
 	}
 
+h1 {
+	color: white;
+	}
+
 	</style>
 </head>
 	
 <!-- THis is a comment -->
 	
 <body style="background-color:lightslategray;">
-<ul style="font-family: 'Raleway', sans-serif;">
+<ul style="font-family: 'Raleway';">
 	<li><a href=#aboutme>ABOUT ME</a></li>
 	<li><a href=#resume>RESUME</a></li>
 	<li><a href=#portfolio>PORTFOLIO</a></li>
 	<li><a href=#contactme>CONTACT ME</a></li>
 </ul>
 	<br></br>
-<h1 title="Name" style="font-family: 'Josefin Slab', serif;">Sienna Li</h1>
+<h1 title="Name" style="font-family: 'Josefin Slab'">Sienna Li</h1>
 <h2></h2>
 <p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
 	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's philosophy club! <br></br> My favorite web pages are: Bored Button </p>
