--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@ ul {
 	padding: 0px;
 	margin: 0;
 	overflow: hidden;
-	background-color: lightslategray;
+	background-color: rgb(233, 150, 122);
 	}
 li {
 	float: right;
@@ -23,7 +23,7 @@ li a {
 	text-decoration: none;
 	}	
 li a:hover {
-	background-color: darkslategray;
+	background-color: rgb(255, 160, 122);
 	}
 p {
 	color: white;
