--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,8 @@ h1 {
 <h1 title="Name" style="font-family: 'Josefin Slab'">Sienna Li</h1>
 <h2></h2>
 <p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
-	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's philosophy club! <br></br> My favorite web pages are: Bored Button </p>
+	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's 
+philosophy club! <br></br> My favorite web pages are: <a href="www.boredbutton.com">Bored Button</a>,<a href="www.boredbutton.com">Bored Button</a><br></br></p>
 
 	
 </body>
