--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,10 @@ h1 {
 <h2></h2>
 <p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
 	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's 
-philosophy club! <br></br> My favorite web pages are: <a href="www.boredbutton.com">Bored Button</a>,<a href="www.boredbutton.com">Bored Button</a><br></br></p>
+philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
+<a href="www.wikipedia.org">Wikipedia</a><br></br> Here is a link to a scratch project I worked on!<br></br>
+
+</p>
 
 	
 </body>
