--- a/aboutme.html
+++ b/aboutme.html
@@ -38,24 +38,27 @@ h1 {
 	
 <!-- THis is a comment -->
 	
-<body style="background-color: rgb(236, 163, 139);">
+<nav>
 <ul style="font-family: 'Raleway';">
 	<li><a href=#aboutme>ABOUT ME</a></li>
 	<li><a href=#resume>RESUME</a></li>
 	<li><a href=#portfolio>PORTFOLIO</a></li>
 	<li><a href=#contactme>CONTACT ME</a></li>
 </ul>
+	</nav>	
+<body style="background-color: rgb(236, 163, 139);">
 	<br></br>
 <h1 title="Name" style="font-family: 'Josefin Slab'">Sienna Li</h1>
 <h2></h2>
 <p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
-	California. Currently, I reside in Chatham, New Jersey. I have one sister. <br></br> Fun fact: I am president of my school's 
-philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
-<a href="www.wikipedia.org">Wikipedia</a><br></br> Here is a link to a scratch project I worked on!<br></br>
-
-</p>
-
+	California. Currently, I reside in Chatham, New Jersey. I have one sister.</p>
 	
+<br></br><p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;">Fun fact: I am president of my school's 
+philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
+<a href="www.wikipedia.org">Wikipedia</a><br></br> </p>
+<p title="Project" style="font-family: 'Raleway', sans-serif;"><a href="https://goo.gl/QhtwUs">Here</a> is a link to a scratch project I worked on with Amanda Mei!</p>
+	<br></br>
+
 </body>
 
 </html>
