--- a/aboutme.html
+++ b/aboutme.html
@@ -46,17 +46,18 @@ h1 {
 	<li><a href=#contactme>CONTACT ME</a></li>
 </ul>
 	</nav>	
-<body style="background-color: rgb(255, 160, 122);">
+<body style="background-color: rgb(207, 144, 123);">
 	<br></br>
-<h1 title="Name" style="font-family: 'Josefin Slab'">Sienna Li</h1>
-<h2></h2>
-<p title="Biography" style="font-family: 'Raleway', sans-serif;">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
+<h1 title="Name" style="font-family: 'Josefin Slab'" style:"font-size:35px">Sienna Li</h1>
+
+<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
 	California. Currently, I reside in Chatham, New Jersey. I have one sister.</p>
 	
-<br></br><p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;">Fun fact: I am president of my school's 
+<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
+<br></br><p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;" >Fun fact: I am president of my school's 
 philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
 <a href="www.wikipedia.org">Wikipedia</a><br></br> </p>
-<p title="Project" style="font-family: 'Raleway', sans-serif;"><a href="https://goo.gl/QhtwUs">Here</a> is a link to a scratch project I worked on with Amanda Mei!</p>
+<p title="Project" style="font-family: 'Raleway', sans-serif;" style="font-size:20px"><a href="https://goo.gl/QhtwUs">Here</a> is a link to a scratch project I worked on with Amanda Mei!</p>
 	<br></br>
 
 </body>
