--- a/aboutme.html
+++ b/aboutme.html
@@ -60,6 +60,11 @@ philosophy club! <br></br> Some of my favorite web pages are: <a href="www.bored
 <p title="Project" style="font-family: 'Raleway', sans-serif;" style="font-size:20px"><a href="https://goo.gl/QhtwUs">Here</a> is a link to a scratch project I worked on with Amanda Mei!</p>
 	<br></br>
 
+
+<script>
+<button onclick = document.getElementById('stuff')="happy">How Are You?</button>
+</script>
+
 </body>
 
 </html>
