--- a/aboutme.html
+++ b/aboutme.html
@@ -40,10 +40,10 @@ h1 {
 	
 <nav>
 <ul style="font-family: 'Raleway';">
-	<li><a href=#aboutme>ABOUT ME</a></li>
-	<li><a href=#resume>RESUME</a></li>
-	<li><a href=#portfolio>PORTFOLIO</a></li>
-	<li><a href=#contactme>CONTACT ME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#aboutme>ABOUT ME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#resume>RESUME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#portfolio>PORTFOLIO</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#contactme>CONTACT ME</a></li>
 </ul>
 	</nav>	
 <body style="background-color: rgb(184, 177, 175);">
