--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@ h1 {
 <p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
 	California. Currently, I reside in Chatham, New Jersey. I have one sister.</p>
 	
-<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
+<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and California!
 <br></br><p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;" >Fun fact: I am president of my school's 
 philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
 <a href="www.wikipedia.org">Wikipedia</a><br></br> </p>
@@ -62,7 +62,7 @@ philosophy club! <br></br> Some of my favorite web pages are: <a href="www.bored
 
 
 <script>
-<button onclick = document.getElementById('stuff')="happy">How Are You?</button>
+<button onclick = "this.innerHTML = Date()>How Are You?</button>
 </script>
 
 </body>
