--- a/aboutme.html
+++ b/aboutme.html
@@ -63,6 +63,7 @@ philosophy club! <br></br> Some of my favorite web pages are: <a href="www.bored
 
 <script>
 <button onclick = "this.innerHTML = Date()>How Are You?</button>
+window.alert("Hello! This is the webpage of Sienna Li. Please explore my page! Thank you for visiting!")
 </script>
 
 </body>
