--- a/aboutme.html
+++ b/aboutme.html
@@ -49,17 +49,18 @@ h1 {
 <body style="background-color: rgb(184, 177, 175);">
 	<br></br>
 <h1 title="Name" style="font-family: 'Josefin Slab'" style:"font-size:35px">Sienna Li</h1>
-
-<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and 
-	California. Currently, I reside in Chatham, New Jersey. I have one sister.</p>
 	
-<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, and came to the United States after that. I have lived in mulitple states including Connecticut, New York, New Jersey, and California!
-<br></br><p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;" >Fun fact: I am president of my school's 
+<p title="Biography" style="font-family: 'Raleway', sans-serif;" style="font-size:20px">I was born in Taiwan in 2000, 
+and moved to the United States when I was three years old. I have lived in mulitple states including Connecticut, New York, 
+New Jersey, and California!
+<br></br>
+
+<p title="Fun fact and favorite web pages" style="font-family: 'Raleway', sans-serif;" >Fun fact: I am president of my school's 
 philosophy club! <br></br> Some of my favorite web pages are: <a href="www.boredbutton.com">Bored Button</a> and
 <a href="www.wikipedia.org">Wikipedia</a><br></br> </p>
+
 <p title="Project" style="font-family: 'Raleway', sans-serif;" style="font-size:20px"><a href="https://goo.gl/QhtwUs">Here</a> is a link to a scratch project I worked on with Amanda Mei!</p>
 	<br></br>
-
 
 <script>
 <button onclick = "this.innerHTML = Date()>How Are You?</button>
