--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 	@import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Playfair+Display|Raleway');
 ul {
 	list-style-type: none;
-	padding: 0px;
+	padding: 0;
 	margin: 0;
 	overflow: hidden;
 	background-color: rgb(141, 130, 127);
@@ -64,7 +64,7 @@ philosophy club! <br></br> Some of my favorite web pages are: <a href="www.bored
 
 <script>
 <button onclick = "this.innerHTML = Date()>How Are You?</button>
-window.alert("Hello! This is the webpage of Sienna Li. Please explore my page! Thank you for visiting!")
+window.alert("Hello! This is the webpage of Sienna Li. Please explore my page! Thank you for visiting!");
 </script>
 
 </body>
