--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
   @import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Playfair+Display|Raleway');
 ul {
   list-style-type: none;
-	padding: 0px;
+	padding: 0;
 	margin: 0;
 	overflow: hidden;
 	background-color: rgb(141, 130, 127);
@@ -49,3 +49,4 @@ h1 {
 <body style="background-color: rgb(184, 177, 175);">
 	<br></br>
 </body>
+<html>
