--- a/aboutme.html
+++ b/aboutme.html
@@ -41,9 +41,9 @@ h1 {
 <nav>
 <ul style="font-family: 'Raleway';">
 	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#aboutme>ABOUT ME</a></li>
-	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#resume>RESUME</a></li>
-	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#portfolio>PORTFOLIO</a></li>
-	<li><a href=https://siennacli.github.io/portfolio/aboutme.html#contactme>CONTACT ME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/resume.html#resume>RESUME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/portfolio.html#portfolio>PORTFOLIO</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/contactme.html#contactme>CONTACT ME</a></li>
 </ul>
 	</nav>	
 <body style="background-color: rgb(184, 177, 175);">
