--- a/portfolio.html
+++ b/portfolio.html
@@ -48,5 +48,8 @@ h1 {
 	</nav>	
 <body style="background-color: rgb(184, 177, 175);">
 	<br></br>
+<img src="octorescue.png" alt="Screenshot of Game Octorescue!" style="width:770;height:535;">
+	<p>
+	</p>
 </body>
 <html>
