--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,7 @@ h1 {
 	<li><a href=https://siennacli.github.io/portfolio/resume.html>RESUME</a></li>
 	<li><a href=https://siennacli.github.io/portfolio/portfolio.html>PORTFOLIO</a></li>
 	<li><a href=https://siennacli.github.io/portfolio/contactme.html>CONTACT ME</a></li>
+	<li><a href=https://siennacli.github.io/portfolio/home.html>HOME</a
 </ul>
 	</nav>	
 <body style="background-color: rgb(184, 177, 175);">
